--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -303,6 +303,41 @@ main article {
 }
 
 
+/* ------- FOOTER--------- */
+footer {
+    padding: 0.833rem 0;
+    background-color: #fbfbfb;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.footer--text{
+    color: #3d3d3d;
+}
+.footer-link {
+    color: #272727;
+    transition: color .3s;
+    -webkit-transition: color .3s;
+    -moz-transition: color .3s;
+    -ms-transition: color .3s;
+    -o-transition: color .3s;
+}
+.footer-link:hover {
+    color: #1E15FF;
+}
+.footer--social-links ion-icon {
+    color: #090909;
+    font-size: 1.1667rem;
+    margin-right: 0.5556rem;
+    transition: color .2s;
+    -webkit-transition: color .2s;
+    -moz-transition: color .2s;
+    -ms-transition: color .2s;
+    -o-transition: color .2s;
+}
+.footer--social-links ion-icon:hover {
+    color: #4568DC;
+}
 /* ------ Media Queries ----- */
 @media (max-width: 1200px) {
     .container {
@@ -325,6 +360,8 @@ main article {
 @media (max-width: 938px) {
     .card {
         width: 28%;
+        margin-right: 10px;
+        margin-left: 10px;
     }
 }
 
@@ -337,6 +374,8 @@ main article {
 @media (max-width: 786px) {
     .card {
         width: 40%;
+        margin-right: 7px;
+        margin-left: 7px;
     }
 }
 
@@ -349,6 +388,14 @@ main article {
 @media (max-width: 550px) {
     .card {
         width: 90%;
+    }
+    footer {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer--social-links {
+        margin: 1.3889rem 0;
     }
 }
 
