--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -84,7 +84,6 @@ img {
 
 /* ---- main ---- */
 section.banner {
-    /* background: linear-gradient(to right, #0052d4, #4364f7, #6fb1fc); */
     background: url(/resources/images/bg4.png);
     background-position: center;
     background-size: cover;
@@ -113,15 +112,65 @@ section.banner {
 }
 
 .banner form {
-    margin-top: 2rem;
+    margin-top: 2.5rem;
     background-color: #fff;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    padding: 7px 10px;
+    display: flex;
+    align-items: center;
+}
+.banner form input {
+    background-color: #f3f3f3;
+    color: #38464d;
+    font-size: 1rem;
+    width: 17.2222rem;
+    padding: 0.5556rem 0.3889rem;
+    border-radius: 9px;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    -ms-border-radius: 9px;
+    -o-border-radius: 9px;
+    border: 1px solid transparent;
+    font-weight: 300;
+    margin-right: 0.1667rem;
 }
 
+.banner form button {
+    background-color: #4869DB;
+    color: white;
+    font-size: 0.8889rem;
+    width: 100px;
+    padding: 12px 15px;
+    border: none;
+    font-weight: 300;
+    letter-spacing: 1px;
+    cursor: pointer;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    transition: all .3s;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -ms-transition: all .3s;
+    -o-transition: all .3s;
+}
+.banner form button:hover {
+    background-color:  #1940cc;
+}
+section.banner p {
+    margin-top: 7px;
+    color:white;
+    font-size: 1.3rem;
+    font-style: italic;
+    font-weight: 300;
+
+}
 /* --- group-nav -------- */
 nav.group-nav {
     padding: 20px;
@@ -376,6 +425,13 @@ footer {
         width: 40%;
         margin-right: 7px;
         margin-left: 7px;
+    }
+    .banner form {
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .banner form input {
+        margin: 10px 0;
     }
 }
 
