fixed form margin

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -431,7 +431,7 @@ footer {
         justify-content: space-evenly;
     }
     .banner form input {
-        margin: 10px 0;
+        margin: 0.5556rem 0;
     }
 }
 
