--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -300,7 +300,7 @@ main article {
 }
 
 .card h3 {
-    margin: .9rem 0;
+    margin: 1.3rem 0 .9rem 0;
     font-weight: 400;
     font-size: 1.3rem;
     color: #090909;
