--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -437,9 +437,14 @@ footer {
     }
 }
 
-@media (max-width: 830px) {
+@media (max-width: 853px) {
     :root {
         font-size: 16.5px;
+    }
+    .card {
+        width: 42%;
+        margin-right: 10px;
+        margin-left: 10px;
     }
 }
 
