--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,7 +11,8 @@ img{max-width:100%;max-height:100%}
 .logo{width:11.111rem}
 .top-btn{position:fixed;bottom:1.1111rem;right:.7222rem;width:2.31rem;height:2.31rem;background-color:#4769dc;border-radius:50%;-webkit-border-radius:50%;-moz-border-radius:50%;-ms-border-radius:50%;-o-border-radius:50%;display:flex;justify-content:center;align-items:center}
 .top-btn ion-icon{color:#fff;font-size:1.467rem;transition:all .3s;-webkit-transition:all .3s;-moz-transition:all .3s;-ms-transition:all .3s;-o-transition:all .3s}
-.top-btn:hover{box-shadow:0 7px 25px 0 rgba(0,0,0,.1);transform:translateY(-3px);-webkit-transform:translateY(-3px);-moz-transform:translateY(-3px);-ms-transform:translateY(-3px);-o-transform:translateY(-3px)}
+.top-btn:hover{box-shadow:0 5px 12px rgba(0,0,0,.5);transform:translateY(-3px);-webkit-transform:translateY(-3px);-moz-transform:translateY(-3px);-ms-transform:translateY(-3px);-o-transform:translateY(-3px)}
+.top-btn:active{box-shadow:none;transform:translateY(3px)}
 section.banner{background:url(/resources/images/bg4.png);background-position:center;background-size:cover;min-height:50vh;display:flex;flex-direction:column;justify-content:center;align-items:center}
 .banner .content{color:#fff;text-align:center}
 .banner .content h1{color:#f5f6fa;font-size:3rem;margin-bottom:.6667rem}
@@ -21,7 +22,7 @@ section.banner{background:url(/resources/images/bg4.png);background-position:cen
 .banner form input:focus{outline:0;border:1px solid #4869db}
 .banner form button{background-color:#4869db;color:#fff;font-size:.8889rem;width:100px;padding:12px 15px;border:none;font-weight:300;letter-spacing:1px;cursor:pointer;border-radius:8px;-webkit-border-radius:8px;-moz-border-radius:8px;-ms-border-radius:8px;-o-border-radius:8px;transition:all .3s;-webkit-transition:all .3s;-moz-transition:all .3s;-ms-transition:all .3s;-o-transition:all .3s;margin-top:.2rem}
 .banner form button:hover{background-color:#1940cc}
-section.banner p{margin-top:7px;color:#fff;font-size:1.3rem;font-style:italic;font-weight:300}
+section.banner p{margin-top:.9rem;color:#fff;font-size:1.3rem;font-weight:300;text-align:center}
 nav.group-nav{padding:20px}
 nav.group-nav ul{display:flex;justify-content:center;flex-wrap:wrap;list-style-type:none}
 nav.group-nav ul li{margin-right:.5556rem;margin-bottom:.5556rem}
